[gd_scene load_steps=3 format=2]

[ext_resource path="res://SettingsPage.gd" type="Script" id=1]
[ext_resource path="res://fonts/MenuItem.tres" type="DynamicFont" id=2]

[node name="SettingsPage" type="ColorRect"]
visible = false
margin_right = 400.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 300 )
color = Color( 0.501961, 0.501961, 0.501961, 0.501961 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 400.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 370.0
margin_bottom = 270.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 340.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Settings"
align = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 340.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 3.0
margin_right = 117.0
margin_bottom = 17.0
text = "Difficulty:"

[node name="DifficultyDropdown" type="OptionButton" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 121.0
margin_right = 340.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 25.0
margin_right = 117.0
margin_bottom = 39.0
text = "Mouse Sensitivity:"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 121.0
margin_top = 24.0
margin_right = 340.0
margin_bottom = 40.0
size_flags_horizontal = 3
min_value = 0.25
max_value = 4.0
step = 0.25
value = 1.0
exp_edit = true

[node name="FullscreenCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 44.0
margin_right = 117.0
margin_bottom = 68.0
text = "Fullscreen"
[connection signal="item_selected" from="MarginContainer/VBoxContainer/GridContainer/DifficultyDropdown" to="." method="_on_DifficultyDropdown_item_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/GridContainer/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_toggled"]
